Bug 78148 - FORMATTING: Inappropriate auto-capitalisation of letters in superscript of "1st" and "2nd" etc when at the start of a sentence
Summary: FORMATTING: Inappropriate auto-capitalisation of letters in superscript of "1...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: Other All
: medium normal
Assignee: Niklas Johansson
URL:
Whiteboard: BSA target:4.5.0 target:4.4.2 target:...
Keywords: regression
: 78778 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-01 10:03 UTC by deanna.m.hood
Modified: 2015-02-28 20:16 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
An example of the cases when this does and doesn't happen. (5.83 KB, image/png)
2014-05-01 10:03 UTC, deanna.m.hood
Details

Note You need to log in before you can comment on or make changes to this bug.
Description deanna.m.hood 2014-05-01 10:03:35 UTC
Created attachment 98284 [details]
An example of the cases when this does and doesn't happen.

Problem description: 
When the text "5th" is automatically formatted to be like "5^{th}", if it's at the start of the sentence the 't' is also auto-capitalised to 'T'. 

Steps to reproduce:
1. Type a word
2. Type a full-stop
3. Press space and type '5th'
4. Press space (and auto-formatting and auto-capitalising will occur)

Current behavior:
On all of '1st', '2nd', '3rd', '4th', '95th', etc, the first letter of the superscript is capitalised. This only seems to happen if it is the start of at least the second sentence in a paragraph: if it is the first word of a paragraph it doesn't auto-capitalise.

Expected behavior:
The expected behaviour would be to not auto-capitalise if you have auto-superscripted.
              
Operating System: Ubuntu
Version: 4.1.3.2 release
Comment 1 Cor Nouws 2014-05-01 13:00:57 UTC
Hi deanna,

thanks for the report. I confirm the behaviour as you describe. And I agree that it should not work like that.

I see the same problem in LibreOffice 3.3.0, so it probably always has been like this..
Comment 2 Cor Nouws 2014-05-16 18:18:29 UTC
*** Bug 78778 has been marked as a duplicate of this bug. ***
Comment 3 tommy27 2014-05-18 08:07:25 UTC
I reproduce it under Win7x64 using 4.2.4.2 and  4.3.0.0.alpha1+ (*) as well. 
I do not reproduce it with OOo 3.3.0

platform -> ALL ; version --> LibO 3.3.0

It seems it's triggered by "capitalize first letter of every sentence" in "Tools/AutoCorrect Options/Options"


* Build ID: a1dd961c3093f5f7624e4d1f2240e9120fd13f23
TinderBox: Win-x86@39, Branch:master, Time: 2014-05-06_11:47:48
Comment 4 Commit Notification 2015-02-19 09:37:01 UTC
Niklas Johansson committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=42ec6448f9acd474d8ec1a92d9362e1b38e13758

tdf#78148 Ordinal numbers should not be auto-capitalized

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Cor Nouws 2015-02-19 12:08:51 UTC
@Niklas

Thanks!
Comment 6 Michael Stahl 2015-02-26 16:05:55 UTC
regression from commit 17e6b8fd05af8fff86847c0ef1e8cc9ad013a1bd
Comment 7 Commit Notification 2015-02-26 16:09:55 UTC
Niklas Johansson committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cbab46342e75a0bd8987620757bf67c4f68f8edd&h=libreoffice-4-4

tdf#78148 Ordinal numbers should not be auto-capitalized

It will be available in 4.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-02-28 20:16:48 UTC
Niklas Johansson committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4ab923b82008396f40b7137ae984a08c4175e28d&h=libreoffice-4-3

tdf#78148 Ordinal numbers should not be auto-capitalized

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.