tdf#78148 Ordinal numbers should not be auto-capitalized

FnChgOrdinalNumber should return true if it changes the ordinal number.
This seems to be accentually removed when the function was
internationalized and has always returned false since.

Change-Id: I633058a99ec033e0c33f807776364a52e22e9c64
Reviewed-on: https://gerrit.libreoffice.org/14535
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>