editeng/source/misc/svxacorr.cxx
@@ -503,6 +503,7 @@ bool SvxAutoCorrect::FnChgOrdinalNumber(
                     rDoc.SetAttr( nNumEnd + 1 , nEndPos,
                                     SID_ATTR_CHAR_ESCAPEMENT,
                                     aSvxEscapementItem);
+                    bChg = true;
                 }
             }
         }
